[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui/screens/UIScreenBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/ui/components/ProgressSlider.gd" type="Script" id=2]
[ext_resource path="res://resources/themes/MenuTheme.tres" type="Theme" id=3]
[ext_resource path="res://resources/fonts/ScreenTitleFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/ui/screens/OptionsScreen.gd" type="Script" id=5]

[node name="OptionsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 5 )

[node name="UIScreenBackground" parent="." instance=ExtResource( 1 )]
anchor_left = -0.5
anchor_top = -0.5
anchor_right = 1.5
anchor_bottom = 1.5

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = -156.0
margin_top = -35.0
margin_right = 156.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 4 )
text = "Options"
align = 1
valign = 1

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.3
anchor_right = 0.9
anchor_bottom = 0.9
custom_constants/separation = 20

[node name="SFXVolume" type="HBoxContainer" parent="Options"]
margin_right = 819.0
margin_bottom = 51.0

[node name="Label" type="Label" parent="Options/SFXVolume"]
margin_top = 12.0
margin_right = 150.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 0 )
text = "SFX"

[node name="ProgressBar" type="ProgressBar" parent="Options/SFXVolume"]
margin_left = 154.0
margin_right = 767.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 50.0
script = ExtResource( 2 )

[node name="HSlider" type="HSlider" parent="Options/SFXVolume/ProgressBar"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
value = 50.0

[node name="CheckButton" type="CheckBox" parent="Options/SFXVolume"]
margin_left = 771.0
margin_right = 819.0
margin_bottom = 51.0
pressed = true

[node name="MusicVolume" type="HBoxContainer" parent="Options"]
margin_top = 71.0
margin_right = 819.0
margin_bottom = 122.0

[node name="Label" type="Label" parent="Options/MusicVolume"]
margin_top = 12.0
margin_right = 150.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 0 )
text = "Music"

[node name="ProgressBar" type="ProgressBar" parent="Options/MusicVolume"]
margin_left = 154.0
margin_right = 767.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 50.0
script = ExtResource( 2 )

[node name="HSlider" type="HSlider" parent="Options/MusicVolume/ProgressBar"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
value = 50.0

[node name="CheckButton" type="CheckBox" parent="Options/MusicVolume"]
margin_left = 771.0
margin_right = 819.0
margin_bottom = 51.0
pressed = true

[node name="FullscreenToggle" type="HBoxContainer" parent="Options"]
margin_top = 142.0
margin_right = 819.0
margin_bottom = 193.0

[node name="Label" type="Label" parent="Options/FullscreenToggle"]
margin_top = 12.0
margin_right = 150.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 0 )
text = "Full Screen"

[node name="CheckButton" type="CheckBox" parent="Options/FullscreenToggle"]
margin_left = 154.0
margin_right = 202.0
margin_bottom = 51.0
pressed = true

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.95
anchor_right = 0.5
anchor_bottom = 0.95
margin_left = -87.0
margin_top = -75.0
margin_right = 87.0
text = "Back"

[connection signal="value_changed" from="Options/SFXVolume/ProgressBar/HSlider" to="." method="_on_SFXVolumeSlider_value_changed"]
[connection signal="toggled" from="Options/SFXVolume/CheckButton" to="." method="_on_MuteSFXButton_toggled"]
[connection signal="value_changed" from="Options/MusicVolume/ProgressBar/HSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="toggled" from="Options/MusicVolume/CheckButton" to="." method="_on_MuteMusicButton_toggled"]
[connection signal="toggled" from="Options/FullscreenToggle/CheckButton" to="." method="_on_FullscreenButton_toggled"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
